--- a/notebooks/tsp.ipynb
+++ b/notebooks/tsp.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -22,62 +20,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a9dd3c4dfc9a6402",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "GRAPH_ID = 'R13470549'  # R13470549 R2555133 R3766483\n",
     "# примеры id есть в graph_osm_loader.py\n",
     "g = graph_osm_loader.get_graph(GRAPH_ID)\n",
     "print(len(g.nodes), len(g.edges))"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a9dd3c4dfc9a6402",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5ac7a4d595dcaffc",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
     "cms_resolver = clustering.LouvainKMeansCommunityResolver(resolution=1)\n",
     "\n",
     "t, cg = centroids_graph_builder.CentroidGraphBuilder().build_with_time(g, cms_resolver)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5ac7a4d595dcaffc",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5ab188fd5f804c0",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "N = 10\n",
     "points = list({p for p, u in utils.read_points(GRAPH_ID, g, num=N)})\n",
     "points"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5ab188fd5f804c0",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c40d021ded13e3b5",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "dst = {(u, v): nx.dijkstra_path_length(g, u, v, weight='length') for u in points for v in points}"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c40d021ded13e3b5",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f5337e5f4da583",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "def get_model(points, dst_matrix, START = None, cms_order = None, initial_X = None, initial_U = None):\n",
@@ -142,38 +160,47 @@
     "    obj = sum(X[a, b] * int(dst_matrix[a, b]) for a in points for b in points)\n",
     "    model.minimize(obj)\n",
     "    return model, X, U"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b4f5337e5f4da583",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b11493fb7d0e5ca7",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "cms_points = list({g.nodes()[p]['cluster'] for p in points})\n",
     "cms_dst = {(u, v): nx.dijkstra_path_length(cg.g, u, v, weight='length') for u in cms_points for v in cms_points}"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b11493fb7d0e5ca7",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
    "id": "f607e44782c9bb9b",
-   "execution_count": null
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "978ad14a7541b2bb",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# from cpsat_autotune import  tune_time_to_optimal, tune_for_gap_within_timelimit\n",
@@ -186,15 +213,18 @@
     "#     n_trials=40,  # Number of trials to run with Optuna\n",
     "#     # relative_gap_limit= 10e5\n",
     "# )"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "978ad14a7541b2bb",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ae4067c20e06987",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "best = {'preferred_variable_order': 2,\n",
@@ -226,136 +256,166 @@
     "\n",
     "solver.parameters.log_search_progress = True\n",
     "solver.parameters.max_time_in_seconds = 60.0 * 30"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ae4067c20e06987",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2ee4cdaf97a25eb0",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "START = points[0]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "2ee4cdaf97a25eb0",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bc4a07beb09a5db5",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "model, X, U = get_model(cms_points, cms_dst, START=g.nodes()[START]['cluster'])\n",
     "status = solver.solve(model)\n",
     "status"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "bc4a07beb09a5db5",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ec091bf0a6cd32f5",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# objective: 39792\n",
     "# best_bound: 39792"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ec091bf0a6cd32f5",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a0946feec18b72e1",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "order_cms = {c: solver.value(U[c]) for c in U}\n",
     "order_cms"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a0946feec18b72e1",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "53e3e15ad70fb932",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "model, X, U = get_model(points, dst, cms_order=order_cms, START = START)\n",
     "status = solver.solve(model)\n",
     "status"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "53e3e15ad70fb932",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "752b704e71c2da4c",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "x_sol = {(u,v) : solver.value(val) for (u,v),val in X.items()}\n",
     "u_sol = {u : solver.value(val) for u,val in U.items()}"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "752b704e71c2da4c",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "27e9fee367d25409",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "model, X, U = get_model(points, dst, START = START, initial_X=x_sol)\n",
     "status = solver.solve(model)\n",
     "status"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "27e9fee367d25409",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2a5399c9a040d26c",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "model, X, U = get_model(points, dst, START = START)\n",
     "status = solver.solve(model)\n",
     "status"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "2a5399c9a040d26c",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9ca13b6d724f1899",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
-    "model = get_model(points, dst,START = START)\n",
-    "status = solver.solve(model)\n",
-    "status"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9ca13b6d724f1899",
-   "execution_count": null
+    "# model,X,U = get_model(points, dst,START = START)\n",
+    "# status = solver.solve(model)\n",
+    "# status"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1066ac3ed34bcd36",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# точное решения для 50 точек\n",
@@ -363,15 +423,18 @@
     "# best_bound: 51523\n",
     "# walltime: 88.2413\n",
     "# usertime: 88.2413"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1066ac3ed34bcd36",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ecc627098ade15e6",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# кластерное решение для 50 точек\n",
@@ -379,15 +442,18 @@
     "# best_bound: 51524\n",
     "# walltime: 3.20884\n",
     "# usertime: 3.20884"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ecc627098ade15e6",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b69d8e648af134de",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# objective: 33237\n",
@@ -395,15 +461,18 @@
     "\n",
     "# objective: 33734\n",
     "# best_bound: 33734"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b69d8e648af134de",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7f01bc4d0ed25ddd",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "res = {}\n",
@@ -411,15 +480,18 @@
     "for i in range(len(points) + 1):\n",
     "    res[i] = u\n",
     "    u = [v for v in points if solver.value(X[u, v]) == 1][0]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7f01bc4d0ed25ddd",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "97599e40af8a05cb",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -441,40 +513,49 @@
     "ax.set_yticks([y - 0.5 for y in range(N)], minor=True)\n",
     "plt.grid(which=\"minor\", ls=\"-\", lw=2)\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "97599e40af8a05cb",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce0c5c035753ecf",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# res = {r : u for (r,u),v in routes.items() if solver.value(v) == 1 }\n",
     "# res"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6ce0c5c035753ecf",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "683888d70120fc7e",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "subgraph = nx.DiGraph()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "683888d70120fc7e",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9a6ea3a6b9cd11ba",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "pp = [res[i] for i in range(len(points) + 1)]\n",
@@ -490,51 +571,63 @@
     "        subgraph.add_edge(u1, u2)\n",
     "    subgraph_points.update(path)\n",
     "# subgraph = g.subgraph(subgraph_points)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9a6ea3a6b9cd11ba",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1f4b84570e96070",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "L"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1f4b84570e96070",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "35c73d44612f93a6",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "node_colors = ['red' if u in set(res.values()) else 'green' for u in subgraph.nodes()]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "35c73d44612f93a6",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a2704202d26e61cd",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# labeldict = {u : u for u in res.values()}"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a2704202d26e61cd",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "391a74a35d6d4c5d",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
@@ -543,55 +636,60 @@
     "10, 10))  # nx.draw(g, pos= {u : [d['x'],d['y']] for u,d in g.nodes(data=True)}, node_size= 20)\n",
     "nx.draw(subgraph, pos={u: [d['x'], d['y']] for u, d in g.nodes(data=True)}, node_size=60, node_color=node_colors,\n",
     "        edge_color='red', width=0.1)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "391a74a35d6d4c5d"
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "_, _ = plt.subplots(1, 1, figsize=(\n",
-    "10, 10))  # nx.draw(g, pos= {u : [d['x'],d['y']] for u,d in g.nodes(data=True)}, node_size= 20)\n",
-    "nx.draw(subgraph, pos={u: [d['x'], d['y']] for u, d in g.nodes(data=True)}, node_size=60, node_color=node_colors,\n",
-    "        edge_color='red', width=0.1)"
-   ],
+   "execution_count": null,
+   "id": "20dec0048e537ea1",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "id": "20dec0048e537ea1"
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
+   "id": "7e275e41359a3032",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "id": "7e275e41359a3032"
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "416ca748-1982-4595-b9b4-6f515c80cd13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
